Finish MVP setup
